# floorplan-generator

./: .coverage  .gitignore  README.md  pyproject.toml
docs/: requriments.txt
docs/plans/: 2026-02-22-apartment-architecture-design.md  2026-02-22-apartment-architecture-plan.md  2026-02-22-floorplan-generator-design.md  2026-02-22-floorplan-generator-plan.md  2026-02-22-renderer-labels-dimensions-fix-design.md  2026-02-22-renderer-labels-dimensions-fix.md
scripts/: floorplan_generator.py  generate_synthetic.py
src/floorplan/: adjacency.py  annotations.py  furniture.py  generator.py  geometry.py  layout_templates.py  models.py  renderer.py  styles.py
tests/: conftest.py  test_adjacency.py  test_annotations.py  test_cli_generator.py  test_cli_synthetic.py  test_furniture.py  test_generator.py  test_geometry.py  test_integration.py  test_layout_templates.py  test_models.py  test_renderer.py  test_styles.py
